--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     
     <title>DOM,Learning</title>
+
+    <style>
+        .bg-blck{
+          background-color: #212121;
+          color: #fff;
+        }
+    </style>
 </head>
-<body>
-    <div class="bg-blck">
-        <h1 class="headding">DOM,learning on Chai aur code </h1>
+<body class="bg-blck">
+    <div >
+        <h1 id="title" class="headding">DOM,learning on Chai aur code <span style="display: none;">test text</span> </h1>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
         <p>Lorem ipsum dolor sit amet.</p>
+
+        <ul>
+            <li class = "list-item">one</li>
+            <li class = "list-item">two</li>
+            <li class = "list-item">three</li>
+            <li class = "list-item">four</li>
+        </ul>
 
     </div>
 </body>
